# lftc

./: CMakeLists.txt  analyzer.cpp  input.txt  main.cpp  output.txt  tema2-partea1.rar
inputs/: input.txt  reserved_keywords
lab1/: CMakeLists.txt  main.cpp
lab1/AF/: AutomatFinit.cpp  AutomatFinit.h
lab1/bst/: BST.cpp  BST.h
lab1/definitions/: file_definition.txt
lab1/inputs/: af_float.txt  af_identifiers.txt  af_integers.txt  input.txt
lab1/outputs/: output.txt  output_fip.txt  output_ts.txt
lab2/: CMakeLists.txt  main.cpp
lab2/AF/: AutomatFinit.cpp  AutomatFinit.h
lab2/inputs/: input.txt
lab3/: bst.c  lab3.l
lab4/: input.txt  lab4_bison.tab.c  lab4_bison.tab.h  lab4_bison.y  lab4_flex.l
outputs/: output_ts.txt
tema2-partea1/: AFD_ConstanteIntregi  AutomatFinit.cpp  AutomatFinit.h  BNF_ContinutFisier  CMakeLists.txt  input_file.txt  main.cpp
